fix(grid): light mode overriding dark mode

--- a/src/components/grid/grid.module.css
+++ b/src/components/grid/grid.module.css
@@ -6,7 +6,7 @@
   fill: #f5f5f5;
 }
 
-.gridRow-dark {
+.gridRow-dark:nth-child(even) {
   fill: rgb(41 39 53);
 }
 
